
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct buffer_head {int dummy; } ;
typedef int handle_t ;



int __ext4_journal_get_write_access(const char *where, unsigned int line,
        void *icb, handle_t *handle, struct buffer_head *bh)
{
 int err = 0;
 return err;
}
